 Bug 465732 -  Don't invalidate plugin after scrolling, r=smichaud, sr=roc