layout/generic/nsObjectFrame.cpp
@@ -3386,11 +3386,6 @@ nsresult nsPluginInstanceOwner::ScrollPositionDidChange(nsIScrollableView* aScro
         }
         pluginWidget->EndDrawPlugin();
       }
-
-      // FIXME - Only invalidate the newly revealed amount.
-      // XXX necessary?
-      if (mWidget)
-        mWidget->Invalidate(PR_FALSE);
     }
 #endif
 
